<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/shopping_list_layout_pic"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:src="@drawable/temp" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shopping_list_layout_name"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/item_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shopping_list_layout_brand"
                android:layout_width="183dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/item_brand"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/shopping_list_layout_button_s"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/subtract"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/shopping_list_layout_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"/>

        <Button
            android:id="@+id/shopping_list_layout_button_a"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/add"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/shopping_list_layout_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>