<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="2"
            android:src="@drawable/temp" />

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/item_name"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/item_brand"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginLeft="10dp"
                    android:text="@string/item_brand"
                    android:textSize="20dp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:text="@string/item_price"
                    android:textColor="#ff0c0b"
                    android:textSize="20dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>